# wco-player-rs

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  deno.json  package-lock.json  package.json  tsconfig.json
.cursor/commands/: opsx-verify.md
build-utils/: Cargo.toml
build-utils/src/: lib.rs
openspec/changes/archive/2026-03-07-add-dark-mode/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-07-add-dark-mode/specs/theme-preference/: spec.md
openspec/changes/archive/2026-03-09-fix-theme-mode-switching-desktop-mobile/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-09-fix-theme-mode-switching-desktop-mobile/specs/theme-preference/: spec.md
scripts/open-wrt/: Dockerfile  build.sh
