[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
    "packages/wco",
    "build-utils",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
wco = { path = "packages/wco" }
web = { path = "packages/web" }
